# Heraklitos

./: WebApplication24.sln
AGV_ROS/src/agv_cpp/: CMakeLists.txt
AGV_ROS/src/agv_interfaces/srv/: LearnWeight.srv
AGV_ROS/src/agv_launch/launch/: mapping_app.launch.py
AGV_ROS/src/agv_py/: setup.cfg  setup.py
AGV_ROS/src/agv_py/agv_py/: deneyap_motor_controller.py  lidar_web_example.py  qrcode.py
WebApplication24/: WebApplication24.csproj
WebApplication24/Controllers/: HomeController.cs
WebApplication24/Models/: ErrorViewModel.cs  MessageModel.cs
WebApplication24/Properties/: launchSettings.json
WebApplication24/Views/Home/: Index.cshtml
WebApplication24/Views/Shared/: _Layout.cshtml
WebApplication24/wwwroot/css/: site.css
WebApplication24/wwwroot/image/: map.pgm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/agv_cpp/share/agv_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/agv_interfaces/share/agv_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/agv_launch/share/agv_launch/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/agv_py/lib/agv_py/: deneyap_motor_controller  deneyap_sensor_controller  interface  lidar_web_example  qrcode  web_interface
log/: latest_build  latest_list
src/agv_cpp/: package.xml
src/agv_cpp/src/: main_node.cpp
src/agv_interfaces/: CMakeLists.txt
src/agv_launch/: CMakeLists.txt  package.xml
src/agv_py/agv_py/: qrcode.py  web_interface.py
(+47 files in other folders)
