<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="melihyasak10@gmail.com">melih</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>agv_py</exec_depend>   <!-- Burası -->  
  <exec_depend>agv_cpp</exec_depend>  <!-- eklendi -->
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>turtlebot3_cartographer</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
